<resources>
    <string name="app_name">Entrega</string>
    <string name="main_label_play">Play</string>
    <string name="main_label_scores">Scores</string>
    <string name="main_label_settings">Settings</string>
    <string name="main_tittle">Who wants to be a millionaire</string>
    <string name="credits_tittle">Credits</string>
    <string name="settings_tittle">Settings</string>
    <string name="score_tittle">Score</string>
    <string name="play_tittle">Play</string>
    <string name="menu_info">Information</string>
    <string name="credits_label_author">Authors</string>
    <string name="credits_author_1" translatable="false">Érica Olmo García\n(erolgar@inf.upv.es)</string>
    <string name="credits_author_2" translatable="false">Brayan Mecinas Pardo\n(bramepar@inf.upv.es)</string>
    <string name="label_playFor">Playing for:</string>
    <string name="play_question">First</string>
    <string name="play_question_number">Question</string>
    <string name="play_answer_1">Answer_1</string>
    <string name="play_answer_2">Answer_2</string>
    <string name="play_answer_3">Answer_3</string>
    <string name="play_answer_4">Answer_4</string>
    <string name="play_menu_call">Call</string>
    <string name="play_menu_public">Public</string>
    <string name="play_menu_fifty">Fifty</string>
    <string name="play_failed_question">You failed!</string>
    <string name="play_succesfull_question">Correct!</string>
    <string name="delete_scores">Are you sure that you want to delete scores?</string>
    <string name="deleted_scores">Scores deleted</string>
    <string name="delete_score">Are you sure that you want to delete this score?</string>
    <string name="deleted_score">Score deleted</string>
    <string name="label_local_scores">Local</string>
    <string name="label_friends_scores">Friends</string>
    <string name="play_failed_question_text">Sorry %1s, %2s is not the rigth answer</string>
    <string name="play_rigth_question_text">Rigth! You have now %1s coins, do you want to stop here or conitnue?</string>
    <string name="play_rigth_question">Correct!</string>
    <string name="play_win">Congratulations</string>
    <string name="play_win_text">Congratulations %1s, you win and your score has been saved!</string>
    <string name="settings_spinner_0" translatable="false">0</string>
    <string name="settings_spinner_1" translatable="false">1</string>
    <string name="settings_spinner_2" translatable="false">2</string>
    <string name="settings_spinner_3" translatable="false">3</string>
    <string name="add_friend">Add frient</string>
    <string name="add_name_friend">Insert your friend\'s name</string>
    <string name="settings_name">Name:</string>
    <string name="settings_name_text">Enter your name</string>
    <string name="settings_help">How many times can you ask for hep:</string>
    <string name="delete">Delete</string>
</resources>
