<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_phone"
        android:icon="@android:drawable/stat_sys_speakerphone"
        android:title="@string/play_menu_call"
        android:visible="true"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/item_public"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/play_menu_public"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_fifty"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/play_menu_fifty"
        android:visible="true"
        app:showAsAction="ifRoom">

    </item>
</menu>